--- a/index.html
+++ b/index.html
@@ -311,7 +311,9 @@
         });
 
         /* --- TIMER LOGIKA --- */
-        const startDate = new Date(2026, 02, 17, 02, 13, 0).getTime();
+        /* Měsíc - 1 */
+        /* 2026-01-17 02:13am */
+        const startDate = new Date(2022, 12, 17, 02, 13, 0).getTime();
 
         function updateTimer() {
             const now = new Date().getTime();
